# mahjong

./: CMakeLists.txt  README.md  fancalculator.txt  full.h5  loader.py  mahjong.py  mahjrun.cpp  mahjrun.py  main.cpp  mjstat.py  model.py  train.py
LibMahjongGB/: MahjongGB.cpp  MahjongGB.h  test.cpp
